# yahoo-groups-to-gmi

./: README.md  pyproject.toml  ygtg.py
