[tool.poetry]
name = "ygtg"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.9"
warcio = "^1.7.4"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
